--- a/src/scss/_gerais.scss
+++ b/src/scss/_gerais.scss
@@ -233,6 +233,7 @@ header {
 *******************/
 
 .card {
+  background: $white;
   display: grid;
   grid-template-areas: "image" "content" "footer";
   grid-template-rows: 200px auto 75px;
@@ -328,40 +329,95 @@ header {
 @media (max-width: 1024px) and (min-width: 768px) {
 }
 
+.btn-voltar {
+  background-color: $white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  height: 46px;
+  width: 46px;
+  color: $mfm-cinza;
+  margin: 20px 0;
+}
+.btn-voltar span {
+  font-size: 36px;
+}
+
 /*Right SideBar
 ****************/
 .right-sidebar {
   grid-area: sidebar;
   justify-self: end;
-  padding: 0 20px 20px 0;
+  padding: 0 0 20px;
   min-width: 320px;
 }
 .right-sidebar .widgets {
   max-width: 320px;
-  top: 0;
+  top: 10px;
 }
 .right-sidebar .search-box {
   margin: 30px 0px;
 }
-.right-sidebar .search-box input {
+
+.form-search {
+  position: relative;
+  display: inline-block;
+  width: 90%;
+  max-width: 500px;
+  margin-top: 40px;
+}
+
+.form-search input[type="search"] {
   width: 100%;
   height: 50px;
   font-size: 24px;
   font-weight: 300;
-  padding: 0 30px;
+  padding: 0 60px 0 20px;
   border-radius: 40px;
   border: 1px solid $mfm-roxo;
+  outline: none;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px;
 }
+
+.form-search button:hover {
+  background-color: rgba($color: $mfm-roxo, $alpha: 1);
+}
+.form-search button {
+  background-color: rgba($color: $mfm-roxo, $alpha: 0.7);
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  color: #fff;
+  font-size: 20px;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  -webkit-border-top-right-radius: 40px;
+  -moz-border-top-right-radius: 40px;
+  -ms-border-top-right-radius: 40px;
+  -o-border-top-right-radius: 40px;
+  border-top-right-radius: 40px;
+  -webkit-border-bottom-right-radius: 40px;
+  -moz-border-bottom-right-radius: 40px;
+  -ms-border-bottom-right-radius: 40px;
+  -o-border-bottom-right-radius: 40px;
+  border-bottom-right-radius: 40px;
+}
+
 .right-sidebar .text-sidebar {
   color: $mfm-roxo;
   padding-bottom: 30px;
 }
 .right-sidebar .text-sidebar h3 {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 900;
 }
 .right-sidebar .text-sidebar p {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: normal;
 }
 @media screen and (max-width: 767px) {
