--- a/src/css/style.css
+++ b/src/css/style.css
@@ -410,6 +410,7 @@ header {
 /*Card
 *******************/
 .card {
+  background: #ffffff;
   display: grid;
   grid-template-areas: "image" "content" "footer";
   grid-template-rows: 200px auto 75px;
@@ -495,40 +496,90 @@ header {
   background-image: linear-gradient(to right, #fff203, #e8b200);
   color: #ffffff; }
 
+.btn-voltar {
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  height: 46px;
+  width: 46px;
+  color: #606060;
+  margin: 20px 0; }
+
+.btn-voltar span {
+  font-size: 36px; }
+
 /*Right SideBar
 ****************/
 .right-sidebar {
   grid-area: sidebar;
   justify-self: end;
-  padding: 0 20px 20px 0;
+  padding: 0 0 20px;
   min-width: 320px; }
 
 .right-sidebar .widgets {
   max-width: 320px;
-  top: 0; }
+  top: 10px; }
 
 .right-sidebar .search-box {
   margin: 30px 0px; }
 
-.right-sidebar .search-box input {
+.form-search {
+  position: relative;
+  display: inline-block;
+  width: 90%;
+  max-width: 500px;
+  margin-top: 40px; }
+
+.form-search input[type="search"] {
   width: 100%;
   height: 50px;
   font-size: 24px;
   font-weight: 300;
-  padding: 0 30px;
+  padding: 0 60px 0 20px;
   border-radius: 40px;
-  border: 1px solid #6318af; }
+  border: 1px solid #6318af;
+  outline: none;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px; }
+
+.form-search button:hover {
+  background-color: #6318af; }
+
+.form-search button {
+  background-color: rgba(99, 24, 175, 0.7);
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  color: #fff;
+  font-size: 20px;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  -webkit-border-top-right-radius: 40px;
+  -moz-border-top-right-radius: 40px;
+  -ms-border-top-right-radius: 40px;
+  -o-border-top-right-radius: 40px;
+  border-top-right-radius: 40px;
+  -webkit-border-bottom-right-radius: 40px;
+  -moz-border-bottom-right-radius: 40px;
+  -ms-border-bottom-right-radius: 40px;
+  -o-border-bottom-right-radius: 40px;
+  border-bottom-right-radius: 40px; }
 
 .right-sidebar .text-sidebar {
   color: #6318af;
   padding-bottom: 30px; }
 
 .right-sidebar .text-sidebar h3 {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 900; }
 
 .right-sidebar .text-sidebar p {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: normal; }
 
 @media screen and (max-width: 767px) {
@@ -997,11 +1048,11 @@ input[type="range"]::-moz-focus-outer {
   margin: 0 20px;
   padding: 5px 5px 5px 10px;
   border-radius: 16px;
-  -webkit-transition: all .3s ease-in-out;
-  -moz-transition: all .3s ease-in-out;
-  -ms-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out; }
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
 
 .topo-praca .btn-player:hover {
   color: #6318af; }
@@ -1042,6 +1093,12 @@ input[type="range"]::-moz-focus-outer {
     background: #6318af; }
 
 .praca .select h3 {
+  font-size: 14px;
+  font-weight: 900;
+  margin-right: 5px; }
+
+.praca h2 {
+  color: #6318af;
   font-size: 14px;
   font-weight: 900;
   margin-right: 5px; }
@@ -1111,7 +1168,7 @@ input[type="range"]::-moz-focus-outer {
 .modal-pracas .modal-header .btn-close {
   color: #606060;
   font-size: 32px;
-  opacity: .8;
+  opacity: 0.8;
   cursor: pointer;
   position: absolute;
   top: 0;
@@ -1289,7 +1346,7 @@ input[type="range"]::-moz-focus-outer {
     border-left-width: 1px; } }
 
 .listaOption {
-  background: #FFF;
+  background: #fff;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -1547,7 +1604,7 @@ input[type="range"]::-moz-focus-outer {
   grid-row-start: body;
   grid-row-end: footer;
   grid-template-areas: "title" "body" "footer";
-  grid-template-rows: 1fr auto 70px;
+  grid-template-rows: 1fr 1fr 70px;
   align-self: center;
   background-color: #ffffff;
   border-radius: 30px;
@@ -1805,7 +1862,10 @@ input[type="range"]::-moz-focus-outer {
 /*Página Noticias
 *********************/
 .section.banner-destaque {
-  background: url("../images/banner_noticias.png") center center/cover no-repeat;
+  background-color: #6318af;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
   height: 388px; }
 
 .banner-destaque .content {
@@ -1851,6 +1911,7 @@ input[type="range"]::-moz-focus-outer {
   grid-template-areas: "banner lista" "plataformas lista";
   grid-template-rows: 80% 20%;
   grid-template-columns: 217px auto;
+  height: 620px;
   max-height: 620px;
   background-color: #ffffff;
   border-radius: 15px;
@@ -1876,11 +1937,27 @@ input[type="range"]::-moz-focus-outer {
   margin: 5px;
   max-width: 32px; }
 
+.section-podcast .plataformas .icons {
+  color: #6318af;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px 0; }
+
+.section-podcast .plataformas .icon {
+  margin: 0px 2px; }
+
+.section-podcast .plataformas .icon svg {
+  height: 32px;
+  width: 32px; }
+
 .podcast-banner {
   grid-area: banner;
   grid-row-start: banner;
   grid-row-end: plataformas;
-  background: url("../images/bg-banner-podcast.png") no-repeat;
+  background: linear-gradient(90deg, #fff203, #e8b200);
+  border-radius: 15px 0 0 15px;
   display: grid;
   grid-template-areas: "title" "logo" "microfone";
   grid-template-rows: 150px repeat(2, auto);
@@ -2019,6 +2096,12 @@ input[type="range"]::-moz-focus-outer {
   font-size: 12px;
   color: #606060; }
 
+.podcast-list-content {
+  grid-area: lista;
+  display: grid;
+  grid-template-areas: "lista" "footer";
+  grid-template-rows: 1fr 60px; }
+
 .podcast-list {
   grid-area: lista;
   overflow-x: hidden;
@@ -2039,8 +2122,10 @@ input[type="range"]::-moz-focus-outer {
   background: rgba(96, 96, 96, 0.7); }
 
 .podcast-list ul {
-  padding: 10px; }
+  padding: 10px;
+  width: 100%; }
 
+.podcasts .card .card-content,
 .podcast-list ul li {
   display: flex;
   padding: 20px 0px;
@@ -2071,6 +2156,11 @@ input[type="range"]::-moz-focus-outer {
   color: mfm-cinza;
   font-weight: normal; }
 
+.podcast-list-content .row-footer {
+  grid-area: footer;
+  display: flex;
+  align-items: center; }
+
 @media screen and (max-width: 767px) {
   .podcast-banner {
     display: none; }
@@ -2095,6 +2185,13 @@ input[type="range"]::-moz-focus-outer {
   .podcast-item-detail .podcast-item-detail-info h3 {
     font-size: 14px;
     margin-bottom: 10px; } }
+
+.podcasts .card {
+  grid-template-areas: "content";
+  grid-template-rows: auto; }
+
+.podcasts .card .card-content {
+  padding: 20px 40px; }
 
 /* Programação
 ***************/
@@ -2676,6 +2773,7 @@ input[type="range"]::-moz-focus-outer {
 .post-list {
   grid-area: list;
   display: flex;
+  align-content: flex-start;
   flex-wrap: wrap;
   width: 100%;
   max-width: 800px;
@@ -2683,21 +2781,29 @@ input[type="range"]::-moz-focus-outer {
   padding-bottom: 50px; }
 
 .post-list .col-loadmore {
-  display: flex;
-  justify-content: center;
-  width: 100%; }
+  display: grid;
+  grid-template-areas: "left right";
+  width: 100%;
+  margin: 30px 0 50px; }
 
 .post-list .btn-loadmore {
   font-size: 16px;
   font-weight: 900;
   text-transform: uppercase;
   align-self: center;
-  margin: 30px auto;
   background: #707070;
   color: #ffffff;
   padding: 10px 40px;
   border-radius: 20px;
   text-align: center; }
+
+.post-list .btn-loadmore.left {
+  grid-area: left;
+  justify-self: flex-start; }
+
+.post-list .btn-loadmore.right {
+  justify-self: flex-end;
+  grid-area: right; }
 
 @media screen and (max-width: 767px) {
   .post-list {
@@ -2706,6 +2812,90 @@ input[type="range"]::-moz-focus-outer {
 @media (min-width: 768px) {
   .post-list {
     min-width: 700px; } }
+
+/*Página Single
+*********************/
+.section.single.banner-destaque {
+  background-color: #e8b200;
+  height: 388px; }
+
+.single.banner-destaque .content {
+  display: grid;
+  grid-template-areas: "top" "bot";
+  grid-template-rows: repeat(2, 1fr);
+  height: 100%; }
+
+.single.banner-destaque .content .title {
+  grid-area: top;
+  align-self: flex-start;
+  margin-top: 20px; }
+
+.single.banner-destaque .content .title .date,
+.single.banner-destaque .content .title h1 {
+  color: #ffffff; }
+
+.single.banner-destaque .content .title h1 {
+  text-transform: none;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 45px;
+  max-width: 800px; }
+
+.single.banner-destaque .content .title .author,
+.single.banner-destaque .content .title .date {
+  font-size: 14px;
+  font-weight: 300; }
+
+.single.banner-destaque .content .title .author {
+  color: #6318af; }
+
+.col-post {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 80px; }
+
+.col-post .see-more {
+  width: 100%;
+  margin: 40px 0; }
+
+.col-post .see-more h1 {
+  color: #6318af;
+  font-weight: 900;
+  font-size: 48px; }
+
+/*Card-Single
+*******************/
+.card.single {
+  grid-template-areas: "image" "content";
+  grid-template-rows: 200px auto; }
+
+.card.single.video {
+  background: #ffffff;
+  grid-template-areas: "image" "content";
+  grid-template-rows: minmax(200px, 540px) auto; }
+
+.card.single.video .card-image {
+  min-height: 218px;
+  max-height: 540px; }
+
+.card.single.video .video-player {
+  height: 540px; }
+
+.card.single.video .video {
+  max-width: 100%;
+  width: 100%;
+  min-height: 200px;
+  height: 100%; }
+
+.card .card-content {
+  padding: 40px; }
+
+.card .card-content p {
+  font-family: "Open Sans";
+  color: #6318af;
+  font-size: 20px;
+  font-weight: normal;
+  margin: 15px 0; }
 
 .bg-fixed {
   background-size: cover;
@@ -2737,6 +2927,9 @@ input[type="range"]::-moz-focus-outer {
 
 .fixed {
   position: fixed; }
+
+.sticky {
+  position: sticky; }
 
 .box-shadow {
   -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 3px 1px -2px rgba(0, 0, 0, 0.12), 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
