--- a/src/scss/_noticias.scss
+++ b/src/scss/_noticias.scss
@@ -148,7 +148,11 @@
 /*Página Noticias
 *********************/
 .section.banner-destaque {
-  background: url("../images/banner_noticias.png") center center / cover no-repeat;
+  background-color: $mfm-roxo;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
   height: 388px;
 }
 .banner-destaque .content {
