--- a/src/scss/_podcasts.scss
+++ b/src/scss/_podcasts.scss
@@ -34,7 +34,7 @@
   display: flex;
   flex-wrap: wrap;
   grid-area: plataformas;
-  justify-content: flex-start;
+  justify-content: center;
   align-content: center;
   align-items: center;
   padding: 10px;
