--- a/src/scss/_rodape.scss
+++ b/src/scss/_rodape.scss
@@ -2,74 +2,86 @@
 ***********/
 
 .section.rodape {
-    background: $mfm-cinza-escuro;
-    //min-height: 400px;
-    padding: 0px 0px 80px;
+  background: $mfm-cinza-escuro;
+  //min-height: 400px;
+  padding: 0px 0px 80px;
 }
 
 .section.rodape .content {
-    display: grid;
-    grid-template-areas: "btn-up" "social" "menu-rodape" "logo";
-    justify-content: center;
-    align-content: center;
-    grid-template-columns: 90%;
+  display: grid;
+  grid-template-areas: "btn-up" "social" "menu-rodape" "endereco" "logo";
+  justify-content: center;
+  align-content: center;
+  grid-template-columns: 90%;
 }
 
 .rodape .row-botao-up {
-    grid-area: btn-up;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
+  grid-area: btn-up;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .rodape .botao-up {
-    cursor: pointer;
-    color: $mfm-amarelo;
-    background: $mfm-cinza-escuro;
-    font-size: 54px;
-    margin-top: -30px;
-    border-radius: 50%;
-    padding: 0px 7px;
+  cursor: pointer;
+  color: $mfm-amarelo;
+  background: $mfm-cinza-escuro;
+  font-size: 54px;
+  margin-top: -30px;
+  border-radius: 50%;
+  padding: 0px 7px;
 }
 
 .rodape .social {
-    grid-area: social;
-    display: flex;
-    justify-content: center;
+  grid-area: social;
+  display: flex;
+  justify-content: center;
 }
 
 .rodape .social .icon-button {
-    margin: 5px;
+  margin: 5px;
 }
 
 .rodape .social .icon-button i {
-    color: $mfm-cinza-escuro;
+  color: $mfm-cinza-escuro;
 }
 
 .rodape .menu-rodape {
-    grid-area: menu-rodape;
-    margin: 20px;
+  grid-area: menu-rodape;
+  margin: 20px;
 }
 
 .rodape .menu-rodape ul {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .rodape .menu-rodape ul li {
-    color: $white;
-    font-weight: normal;
-    font-size: 12px;
-    margin: 10px;
+  color: $white;
+  font-weight: normal;
+  font-size: 12px;
+  margin: 10px;
 }
 
+.rodape .row-endereco {
+  grid-area: endereco;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 20px;
+}
+.rodape .row-endereco span {
+  color: $white;
+  font-family: $font-secundary;
+  font-size: 14px;
+  text-align: center;
+}
 .rodape .row-logo {
-    grid-area: logo;
-    display: flex;
-    justify-content: center;
+  grid-area: logo;
+  display: flex;
+  justify-content: center;
 }
 
 .rodape .row-logo img {
-    max-width: 150px;
+  max-width: 150px;
 }
