--- a/src/css/style.css
+++ b/src/css/style.css
@@ -419,6 +419,9 @@ header {
   max-width: 800px;
   margin: 15px 5px; }
 
+.col-50 .card {
+  height: 95%; }
+
 .card.wide {
   display: grid;
   grid-template-areas: "image content" "image footer";
@@ -1065,6 +1068,7 @@ input[type="range"]::-moz-focus-outer {
 .topo-praca .btn-player {
   display: flex;
   cursor: pointer;
+  white-space: nowrap;
   align-content: center;
   align-items: center;
   justify-content: center;
@@ -1122,6 +1126,9 @@ input[type="range"]::-moz-focus-outer {
   font-size: 14px;
   font-weight: 900;
   margin-right: 5px; }
+
+.praca .select h3.mobile {
+  display: none; }
 
 .praca h2 {
   color: #6318af;
@@ -1298,6 +1305,25 @@ input[type="range"]::-moz-focus-outer {
 .list-group-horizontal .list-group-item + .list-group-item.active {
   margin-left: -1px;
   border-left-width: 1px; }
+
+@media screen and (max-width: 767px) {
+  .topo-praca .btn-player {
+    margin-left: 0; }
+  .topo-praca .btn-player,
+  .praca .select h3,
+  .praca h3 {
+    font-size: 12px; }
+  .praca h3,
+  .praca .select h3 {
+    display: none; }
+  .praca .select h3.mobile {
+    display: block; }
+  .section.section-menu-topo {
+    display: flex;
+    align-items: center;
+    height: 51px; }
+  .topo-praca .content {
+    justify-content: space-between; } }
 
 @media (min-width: 576px) {
   .list-group-horizontal-sm {
@@ -1728,12 +1754,26 @@ input[type="range"]::-moz-focus-outer {
 .slideOutToRight {
   animation: slideOutToRight 1s; }
 
-@media (max-width: 767.9px) {
+@media screen and (max-width: 767.9px) {
   .banner-slide .banner-card {
     max-width: 400px;
     min-width: 200px;
-    left: 10%;
-    bottom: 20px; } }
+    margin-top: 300px; }
+  .banner-slide {
+    margin-bottom: -10px; }
+  .banner-card .card-title h3 {
+    line-height: 24px;
+    text-align: left;
+    font-weight: 900;
+    font-size: 24px;
+    color: #6318af; }
+  .banner-card .card-body p {
+    display: none; }
+  .banner-slide .banner-card {
+    grid-template-areas: "title" "footer";
+    grid-template-rows: 1fr 70px; }
+  .banner-card .card-footer nav {
+    display: none; } }
 
 @media (min-width: 768px) {
   .banner-slide .banner-card {
@@ -2194,7 +2234,7 @@ input[type="range"]::-moz-focus-outer {
     display: none; }
   .podcast-box {
     grid-template-areas: "plataformas" "lista";
-    grid-template-rows: 10% 90%;
+    grid-template-rows: 100px auto;
     grid-template-columns: auto; }
   .podcast-list {
     margin-left: 10px;
